# rand-full

./: CMakeLists.txt  README.md  RandomNumberGenerator.cpp  RandomNumberGenerator.h  SettingsDialog.cpp  SettingsDialog.h  icon.qrc  main.cpp
